[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=44.0.1",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "psutil>=7.0.0",
    "scapy>=2.6.1",
    "scikit-learn>=1.6.1",
    "streamlit>=1.42.1",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "twilio>=9.4.5",
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
